3.10.0/_sources/gallery/lines_bars_and_markers/scatter_demo2.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines_bars_and_markers/scatter_demo2.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_lines_bars_and_markers_scatter_demo2.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_bars_and_markers_scatter_demo2.py:


=============
Scatter Demo2
=============

Demo of scatter plot with varying marker colors and sizes.

.. GENERATED FROM PYTHON SOURCE LINES 8-38

.. code-block:: Python

    import matplotlib.pyplot as plt
    import numpy as np

    import matplotlib.cbook as cbook

    # Load a numpy record array from yahoo csv data with fields date, open, high,
    # low, close, volume, adj_close from the mpl-data/sample_data directory. The
    # record array stores the date as an np.datetime64 with a day unit ('D') in
    # the date column.
    price_data = cbook.get_sample_data('goog.npz')['price_data']
    price_data = price_data[-250:]  # get the most recent 250 trading days

    delta1 = np.diff(price_data["adj_close"]) / price_data["adj_close"][:-1]

    # Marker size in units of points^2
    volume = (15 * price_data["volume"][:-2] / price_data["volume"][0])**2
    close = 0.003 * price_data["close"][:-2] / 0.003 * price_data["open"][:-2]

    fig, ax = plt.subplots()
    ax.scatter(delta1[:-1], delta1[1:], c=close, s=volume, alpha=0.5)

    ax.set_xlabel(r'$\Delta_i$', fontsize=15)
    ax.set_ylabel(r'$\Delta_{i+1}$', fontsize=15)
    ax.set_title('Volume and percent change')

    ax.grid(True)
    fig.tight_layout()

    plt.show()




.. image-sg:: /gallery/lines_bars_and_markers/images/sphx_glr_scatter_demo2_001.png
   :alt: Volume and percent change
   :srcset: /gallery/lines_bars_and_markers/images/sphx_glr_scatter_demo2_001.png, /gallery/lines_bars_and_markers/images/sphx_glr_scatter_demo2_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 39-45

.. tags::

   component: marker
   component: color
   plot-style: scatter
   level: beginner


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 2.063 seconds)


.. _sphx_glr_download_gallery_lines_bars_and_markers_scatter_demo2.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: scatter_demo2.ipynb <scatter_demo2.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: scatter_demo2.py <scatter_demo2.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: scatter_demo2.zip <scatter_demo2.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
